--- a/android/PinkOctopusProject/app/src/main/res/values/strings.xml
+++ b/android/PinkOctopusProject/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">PinkOctopusProject</string>
 
     <!-- Menu Items -->
-    <string name="menu_main_settings">Settings</string>
-    <string name="menu_main_about">About</string>
+    <string name="menu_library_settings">Settings</string>
+    <string name="menu_library_about">About</string>
 
 </resources>
